# auto_invoice

./: .gitignore  DEPENDENCY_MANAGEMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  UV_SETUP_SUMMARY.md  example.py  pyproject.toml  run.ps1  run.sh  setup.ps1  setup.sh  test_playwright.py  示例说明.md
config/: config.json  config.yaml
email_invoices/: CRYPTO_README.md  config.json  demo_crypto.py  email_client.py  email_invoices_starter.py  invoice_attachment_downloader.py
email_invoices/crypto/: RSA_ENCRYPTION_SUMMARY.md  config_crypto.py  rsa_utils.py  setup_crypto.py
email_invoices/tests/: test_email_client.py
invoice_parser/: ParseInvoice.py
invoice_selector/: AI.py  DownloadEmail.py  DriverSingleton.py  config.py  main.py  util.py
