[project]
name = "auto-invoice"
version = "0.1.0"
description = "自动下载邮件中的发票附件"
authors = [
    {name = "Vincent", email = "vincenti18n@qq.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "imapclient>=2.1.0",
    "requests>=2.28.0",
    "playwright>=1.40.0",
    "pytest>=7.0.0",
    "cryptography>=41.0.0",
    "selenium>=4.27.1",
    "openai>=1.97.1",
    "pyyaml>=6.0.2",
    "watchdog>=4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["email_invoices/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.hatch.build.targets.wheel]
packages = ["email_invoices"] 

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
